--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fnx-recomendaciones",
+  "name": "fenix_formulario_simulacion_mfront",
   "version": "0.0.1",
   "description": "microfrontend para recomendaciones",
   "main": "index.js",
@@ -63,6 +63,7 @@
     "jest-css-modules": "^2.1.0",
     "jest-svg-transformer": "^1.0.0",
     "prettier": "^2.2.1",
+    "sonarqube-scanner": "^2.6.0",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.3",
     "webpack": "^5.10.1",
