--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "fenix_formulario_simulacion_mfront",
+  "name": "fnx-recomendaciones",
   "version": "0.0.1",
   "description": "microfrontend para recomendaciones",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "webpack serve --mode=development --hot",
+    "start": "webpack --mode=production && node server.js",
+    "start-dev": "webpack serve --mode=development --hot",
     "test": "jest",
     "test-cov": "jest --coverage",
     "sonar": "node sonar-project.js"
@@ -20,7 +21,9 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "cfenv": "^1.2.3",
     "core-js": "^3.8.1",
+    "express": "^4.17.1",
     "jest": "^26.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -30,6 +33,9 @@
     "sass-loader": "^10.1.0",
     "ts-jest": "^26.4.4",
     "url-loader": "^4.1.1"
+  },
+  "engines": {
+    "node": ">=14.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -63,7 +69,6 @@
     "jest-css-modules": "^2.1.0",
     "jest-svg-transformer": "^1.0.0",
     "prettier": "^2.2.1",
-    "sonarqube-scanner": "^2.6.0",
     "style-loader": "^2.0.0",
     "typescript": "^4.1.3",
     "webpack": "^5.10.1",
