--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "lib": ["es6", "dom"],
     "esModuleInterop": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "server.js"]
 }
